메인페이지 추가

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
 }
+.app {
+  background-color: transparent;
 
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
