--- a/src/components/Pages/pages/Form/style/MondayWrapper.scss
+++ b/src/components/Pages/pages/Form/style/MondayWrapper.scss
@@ -4,7 +4,8 @@
   height: 200px;
   width: 1200%;
   // max-width:900px;
-  border: 1px solid #000;
+  // border: 1px solid #000;
+  // overflow-y: hidden;
 }
 
 .MondayWrapperForm {
@@ -13,4 +14,76 @@
   // border: 1px solid red;
   display: inline-flex;
   margin-left: 0px;
+}
+
+.MondayWrapperH1 {
+  width: 100%;
+  height: 100px;
+  display: inline-block;
+  float: left;
+}
+
+.Name {
+  width: 100%;
+  height: 80px;
+  border: 1px solid #000;
+  float: left;
+}
+
+.p1 {
+  display: inline-flex;
+  font: bold 14px/24px arial;
+  text-align: left;
+  margin: 50px 120px 0px 40px;
+  position: relative;
+  left: 30px;
+  bottom: 50px;
+}
+
+.p2 {
+  display: inline-flex;
+  font: bold 14px/24px arial;
+  text-align: left;
+  margin: 50px 120px 0px 40px;
+  position: relative;
+  left: 30px;
+  bottom: 50px;
+}
+
+.p3 {
+  display: inline-flex;
+  font: bold 14px/24px arial;
+  text-align: left;
+  margin: 50px 120px 0px 40px;
+  position: relative;
+  left: 60px;
+  bottom: 50px;
+}
+.p4 {
+  display: inline-flex;
+  font: bold 14px/24px arial;
+  text-align: left;
+  margin: 50px 120px 0px 40px;
+  position: relative;
+  left: 100px;
+  bottom: 50px;
+}
+.p5 {
+  display: inline-flex;
+  font: bold 14px/24px arial;
+  text-align: left;
+  margin: 50px 120px 0px 40px;
+  position: relative;
+  left: 120px;
+  bottom: 50px;
+}
+
+.p6 {
+  display: inline-flex;
+  font: bold 14px/24px arial;
+  text-align: left;
+  margin: 50px 120px 0px 40px;
+  position: relative;
+  left: 100px;
+  bottom: 50px;
 }
