--- a/src/components/Pages/pages/style/NewAnime.scss
+++ b/src/components/Pages/pages/style/NewAnime.scss
@@ -1,76 +1,58 @@
-.NewAnimeWrapper {
+.tabs {
+  font-family: arial;
+  // max-width: 100%;
   width: 100%;
-  height: 400px;
-  // margin-top:-80px;
-  border: 1px solid #000;
-  position: relative;
-  bottom: 50px;
-}
-
-.NewAnimeH1 {
-  text-align: left;
-  margin-left: 45px;
-  font: bold 32px/35px arial;
-  float: left;
-}
-
-.UploadLink {
-  float: left;
-  margin-bottom: -50px;
   margin-left: 20px;
-  margin-top: 10px;
-  //    border:1px solid #000;
-  z-index: inherit;
+  min-height: 800px;
+  text-align: center;
+  margin-top: -200px;
+  // margin-left: -20%;
+  position: absolute;
+  overflow: hidden;
+  left: -20px;
+  top: 900px;
+
+  // border: 1px solid red;
 }
 
-.button1 {
-  background: none;
-  box-sizing: border-box;
-  box-shadow: 0px 0.5px rgb(134, 134, 134);
-  border-radius: 5%;
-  padding: 10px;
-  border: 1px solid rgb(194, 194, 194);
-  position: inherit;
-  font: bold 18px/24px arial;
-  z-index: -1;
-}
-
-.button1Link {
-  text-decoration: none;
-  color: rgb(29, 29, 29);
-  z-index: 999;
-}
-
-.toggle {
+.Tab1 {
   width: 100%;
-  max-width: 1200px;
+  height: 200px;
+}
+
+.Image {
+  display: inline-block;
+  padding: 20px;
+  // margin-left: 20px;
+  // float: left;
+  // display: block;
+  position: relative;
+  left: 0px;
+}
+
+.Tab12 {
+  width: 100px;
   height: 100px;
-  // border:1px solid #000;
-  position: relative;
-  left: -220px;
+  background-color: red;
+  position: absolute;
 }
 
-li {
-  display: inline-flex;
-  margin: 15px;
-  width: 40px;
-  height: 40px;
-  // border:1px solid #000;
+button {
+  margin-right: 15px;
+  font-size: 28px;
+  background: transparent;
+  border: none;
+  outline: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.4);
+  transition: all ease-in-out 0.2s;
+  border-bottom: 2px solid transparent;
+  border: 1px solid #42b3f4;
   border-radius: 100%;
-  padding: 10px;
-  text-align: center;
-  background: rgb(192, 192, 192);
 }
-
-.list_toggle {
-  text-align: center;
-  position: relative;
-  left: 10px;
-  top: 5px;
-  font: bold 18px/24px arial;
-  color: #fff;
-}
-
-.on {
-  color: red;
+.active {
+  border-bottom: 2px solid #42b3f4;
+  background: #42b3f4;
+  color: black;
 }
