--- a/src/components/Pages/style/image.scss
+++ b/src/components/Pages/style/image.scss
@@ -1,74 +1,73 @@
 .width {
-    width:100%;
-    height:1800px;
-    // background:#000;
+  width: 100%;
+  height: 1800px;
+  // background:#000;
 }
 
 .img {
-    width:600px;
-    position:relative;
-    left:100px;
-    top:100px;
-    // z-index:0;
+  width: 600px;
+  position: relative;
+  left: 100px;
+  top: 100px;
+  // z-index:0;
 }
 
 .img2 {
-    width:600px;
-    position:relative;
-    left:100px;
-    top:100px;
-    // z-index:0;
+  width: 600px;
+  position: relative;
+  left: 100px;
+  top: 100px;
+  // z-index:0;
 }
 
 .h1 {
-    position:relative;
-    top:115px;
-    left:100px;
-    font-size:24px;
-    color:#fff;
+  position: relative;
+  top: 115px;
+  left: 100px;
+  font-size: 24px;
+  color: #fff;
 }
 
 .oh {
-    position:relative;
-    top:20px;
+  position: relative;
+  top: 20px;
 }
 
 .button {
-    width:140px;
-    max-width:290px;
-    height:60px;
-    position:relative;
-    top:125px;
-    left:100px;
-    background: #fff;
-    border:none;
-    border-radius: 5%;
-    outline:none;
+  width: 140px;
+  max-width: 290px;
+  height: 60px;
+  position: relative;
+  top: 125px;
+  left: 100px;
+  background: #fff;
+  border: none;
+  border-radius: 5%;
+  outline: none;
 }
 
 .Link {
-    width:10px;
-    height:80px;
-    // border:2px solid #000;
-    text-decoration:none;
-    color:#000;
-    padding:10px 52.1px 20px 20px;
- 
+  width: 10px;
+  height: 80px;
+  // border:2px solid #000;
+  text-decoration: none;
+  color: #000;
+  padding: 10px 52.1px 20px 20px;
 }
 
-.h2 {
-    font:bold 19px/10px arial;
-    text-align:left;
-    margin-left:20px;
-    margin-top:-5px;
-    outline:none;
-    float:left;
-    display:inline-flex;;
+.HHH {
+  font: bold 19px/10px arial;
+  text-align: left;
+  margin-left: 10px;
+  margin-top: -20px;
+  outline: none;
+  float: left;
+  display: inline-flex;
 }
 
 .h3 {
-    float:right;
-    position:absolute;
-    left:100px;
-    top:18px;
+  float: right;
+  position: absolute;
+  left: 110px;
+  top: 20px;
 }
